Made background white again

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@ body {
     padding: 0em 1em;
     font: 1em "Lucida Grande", Helvetica, Arial, sans-serif;
     margin: auto;
-    background-color: #8c8c8c;
+    /* background-color: #8c8c8c; */
 }
 
 a {
